force-app/main/default/objects/PMD_Report__mdt/PMD_Report__mdt.object-meta.xml
<CustomObject>
    <label>PMD Report</label>
    <pluralLabel>PMD Reports</pluralLabel>
</CustomObject>