force-app/main/default/objects/PMD_Report__mdt/fields/Org_Address__c.field-meta.xml
<CustomField>
    <fullName>Org_Address__c</fullName>
    <label>Org Address</label>
    <type>TextArea</type>
</CustomField>