force-app/main/default/objects/PMD_Report__mdt/fields/Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Public_Group__c</fullName>
    <label>Public Group</label>
    <type>TextArea</type>
</CustomField>